--- a/passportlib/src/main/res/values-zh-rCN/strings.xml
+++ b/passportlib/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- 注册界面 -->
+    <string name="register_do">完成</string>
+    <string name="register_obtain_capche">获取验证码</string>
+
+    <!-- 登录界面 -->
     <string name="login_forget_password">忘记密码</string>
     <string name="login_register">新用户注册</string>
     <string name="login_do">登录</string>
+
 </resources>
