--- a/passportlib/src/main/res/values-zh-rCN/strings.xml
+++ b/passportlib/src/main/res/values-zh-rCN/strings.xml
@@ -2,11 +2,20 @@
 <resources>
 
     <!-- 通用 -->
-    <string name="error_lack_of_phone">请输入手机号码</string>
+    <string name="error_phone">手机号不能为空</string>
+    <string name="error_captcha">激活码不能为空</string>
+    <string name="error_password">密码不能为空或少于8位</string>
+    <string name="error_password_confirm">两次输入的密码不一致</string>
+    <string name="hint_phone">请输入手机号</string>
+    <string name="hint_captcha">请输入验证码</string>
+    <string name="hint_password">请设置密码，8-16位数字、英文、符号</string>
+    <string name="hint_password_confirm">请再次输入设置的密码</string>
+    <string name="hint_captcha_counting">%1$ds</string>
+    <string name="text_captcha_retrieve">重新获取</string>
     
     <!-- 注册界面 -->
     <string name="register_do">完成</string>
-    <string name="register_obtain_capche">获取验证码</string>
+    <string name="register_obtain_captcha">获取验证码</string>
 
     <!-- 登录界面 -->
     <string name="login_forget_password">忘记密码</string>
