完成混淆测试

--- a/passportlib/src/main/res/values/strings.xml
+++ b/passportlib/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="register_title">用户注册</string>
     <string name="register_do">完成</string>
     <string name="register_obtain_captcha">获取验证码</string>
+    <string name="register_success_tip">注册成功</string>
 
     <!-- 密码登录界面 -->
     <string name="login_forget_password">忘记密码</string>
@@ -33,6 +34,7 @@
     <!-- 重置密码 -->
     <string name="reset_password_title">重置密码</string>
     <string name="reset_password_tip">重置密码将同时更改实地集团下平台的密码，如：哈奇APP、家有健康APP等，请注意使用新密码登录</string>
+    <string name="reset_passpord_success_tip">重置密码成功</string>
 
     <!-- 修改密码 -->
     <string name="password_modify_title">修改密码</string>
