--- a/passportlib/src/main/res/values/strings.xml
+++ b/passportlib/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">PassportLib</string>
+
+    <string name="lib_name">PassportLib</string>
 
     <!-- 通用 -->
     <string name="error_phone">手机号为空或不正确</string>
