--- a/passportlib/src/main/res/values/strings.xml
+++ b/passportlib/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="error_captcha">激活码不能为空</string>
     <string name="error_password">密码不能为空或少于8位</string>
     <string name="error_password_confirm">两次输入的密码不一致</string>
-    <string name="error_sign">非法签名</string>
     <string name="error_network">网络连接异常,请检查设备网络</string>
+    <!--<string name="error_sign">非法签名</string>-->
     <string name="hint_phone">请输入手机号</string>
     <string name="hint_captcha">请输入验证码</string>
     <string name="hint_password">请设置密码，8-16位数字、英文、符号</string>
