--- a/passportlib/src/main/res/values/strings.xml
+++ b/passportlib/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="error_password_empty">密码不能为空</string>
     <string name="error_password_format">密码格式输入有误，请重新输入</string>
     <string name="error_password_confirm">两次输入的密码不一致</string>
+    <string name="error_password_same">新旧密码不能一致，请重新输入</string>
     <string name="error_network">网络异常</string>
     <!--<string name="error_sign">非法签名</string>-->
     <string name="hint_phone">请输入手机号</string>
