--- a/passportlib/src/main/res/values-zh-rCN/strings.xml
+++ b/passportlib/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <string name="lib_name">PassportLib</string>
 
     <!-- 通用 -->
     <string name="error_phone_empty">手机号不能为空</string>
@@ -8,19 +9,24 @@
     <string name="error_password_empty">密码不能为空</string>
     <string name="error_password_format">密码格式输入有误，请重新输入</string>
     <string name="error_password_confirm">两次输入的密码不一致</string>
+    <string name="error_password_same">新旧密码不能一致，请重新输入</string>
     <string name="error_network">网络异常</string>
+    <string name="error_server">服务器开小差了，请稍后再试</string>
+    <!--<string name="error_sign">非法签名</string>-->
     <string name="hint_phone">请输入手机号</string>
+    <string name="hint_image_captcha">请输入图形验证码</string>
     <string name="hint_captcha">请输入验证码</string>
     <string name="hint_password">请设置密码，8-16位数字、英文、符号</string>
     <string name="hint_password_confirm">请再次输入设置的密码</string>
     <string name="hint_captcha_counting">%1$ds</string>
     <string name="text_captcha_retrieve">重新获取</string>
-    
+
     <!-- 注册界面 -->
     <string name="register_title">用户注册</string>
-    <string name="register_do">完成</string>
+    <string name="register_do">同意协议并注册</string>
     <string name="register_obtain_captcha">获取验证码</string>
     <string name="register_success_tip">注册成功</string>
+    <string name="register_declare_agreement">注册即表示同意用户协议</string>
 
     <!-- 密码登录界面 -->
     <string name="login_forget_password">忘记密码</string>
@@ -40,5 +46,4 @@
     <!-- 修改密码 -->
     <string name="password_modify_title">修改密码</string>
     <string name="password_modify_hint_origin">请输入原密码</string>
-
 </resources>
