--- a/passportlib/src/main/res/values/strings.xml
+++ b/passportlib/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="error_password_same">新旧密码不能一致，请重新输入</string>
     <string name="error_network">网络异常</string>
     <string name="error_server">服务器开小差了，请稍后再试</string>
-    <!--<string name="error_sign">非法签名</string>-->
     <string name="hint_phone">请输入手机号</string>
     <string name="hint_image_captcha">请输入图形验证码</string>
     <string name="hint_captcha">请输入验证码</string>
@@ -20,12 +19,15 @@
     <string name="hint_password_confirm">请再次输入设置的密码</string>
     <string name="hint_captcha_counting">%1$ds</string>
     <string name="text_captcha_retrieve">重新获取</string>
+    <string name="text_finish">完成</string>
+    <string name="tip_captcha_send">验证码已发送</string>
 
     <!-- 注册界面 -->
     <string name="register_title">用户注册</string>
-    <string name="register_do">完成</string>
+    <string name="register_do">同意协议并注册</string>
     <string name="register_obtain_captcha">获取验证码</string>
     <string name="register_success_tip">注册成功</string>
+    <string name="register_declare_agreement">注册即表示同意用户协议</string>
 
     <!-- 密码登录界面 -->
     <string name="login_forget_password">忘记密码</string>
